# MedX

./: .gitignore  Application.cpp  CMakeLists.txt  MedXApplication.cpp  MedXApplication.h  MedXMainWindow.cpp  MedXMainWindow.h
Callbacks/: ImageInteractionCallback.cpp  ImageInteractionCallback.h
Luts/: red_reverse
QWidgets/: CentralWidget.cpp  CentralWidget.h  CrossSectionalWidget.cpp  CrossSectionalWidget.h  VolumeRenderingWidget.cpp  VolumeRenderingWidget.h
Readers/: DICOMReader.cpp  DICOMReader.h  ImageReader.h
Threads/: MedicalImageReaderThread.cpp  MedicalImageReaderThread.h
Utils/: LookupTableReader.cpp  LookupTableReader.h
